Add-Update-Delete-Listeleme eklendi

--- a/src/app/components/color-add/color-add.component.html
+++ b/src/app/components/color-add/color-add.component.html
@@ -1,12 +1,12 @@
 <div class="content mt-4">
     <div class="col-md-12">
         <div class="card">
-            <div class="card-header"><h5 class="title">Marka Ekle</h5></div>
+            <div class="card-header"><h5 class="title">Renk Ekle</h5></div>
             <div class="card-body">
-                <form [formGroup]="brandAddForm">
+                <form [formGroup]="colorAddForm">
                     <div class="form-group mb-3">
                         <input type="text" id="id" formControlName="name" 
-                        class="form-control" placeholder="Marka İsmi"/>
+                        class="form-control" placeholder="Renk İsmi"/>
                     </div>
                 </form>
             </div>
