--- a/src/app/components/car-update/car-update.component.html
+++ b/src/app/components/car-update/car-update.component.html
@@ -5,7 +5,7 @@
             <div class="card-body" *ngFor="let cardetail of cardetails">
                 <form [formGroup]="carUpdateForm">
                     <div class="form-group mb-3">
-                        <input type="number" id="carId" formControlName="id" 
+                        <input type="number" id="id" formControlName="id" 
                         class="form-control" placeholder="{{cardetail.carId}}"/>
                     </div>
                 </form>
@@ -42,8 +42,9 @@
             </div>
             <div class="card-footer">
                 <button class="btn btn-fill btn-primary" (click)="update()">Kaydet</button>
+                <button class="btn btn-fill btn-primary" style="margin-left: 4ex;" (click)="goToCarList()"
+                >Geri Dön</button>
             </div>
         </div>
     </div>
 </div>
-
