--- a/src/app/components/navi/navi.component.html
+++ b/src/app/components/navi/navi.component.html
@@ -7,13 +7,32 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link active" aria-current="page" (click)="goToCarList()"
+             routerLink="/cars/carlist">Araba Güncelle</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
+            <a class="nav-link" (click)="goToCarAdd()"
+            routerLink="/cars/add">Araba Ekle</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" (click)="goToBrandList()"
+            routerLink="/brands/list">Marka Güncelle</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" (click)="goToBrandAdd()"
+            routerLink="/brands/add">Marka Ekle</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" (click)="goToColorList()"
+            routerLink="/colors/list">Renk Güncelle</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" (click)="goToColorAdd()"
+            routerLink="/colors/add">Renk Ekle</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" 
+            role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Dropdown
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
