--- a/src/app/components/color-add/color-add.component.html
+++ b/src/app/components/color-add/color-add.component.html
@@ -4,9 +4,10 @@
             <div class="card-header"><h5 class="title">Renk Ekle</h5></div>
             <div class="card-body">
                 <form [formGroup]="colorAddForm">
-                    <div class="form-group mb-3">
-                        <input type="text" id="id" formControlName="name" 
+                    <div class="form-group form-floating mb-3">
+                        <input type="text" id="name" formControlName="name" 
                         class="form-control" placeholder="Renk İsmi"/>
+                        <label for="name">Renk İsmi</label>
                     </div>
                 </form>
             </div>
