--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -3,7 +3,7 @@
     <form [formGroup]="loginForm">
       <h1 class="h3 mb-3 fw-normal">Giriş yap</h1>
 
-      <div class="form-floating">
+      <div class="form-floating mb-2">
         <input
           formControlName="email"
           type="email"
@@ -29,7 +29,7 @@
           <input type="checkbox" value="remember-me" /> Remember me
         </label>
       </div>
-      <button class="w-100 btn btn-lg btn-primary" (click)="login()">
+      <button class="w-100 btn btn-lg btn-primary" (click)="login()" routerLink="/">
         Giriş yap
       </button>
       <p class="mt-5 mb-3 text-muted">&copy; 2017–2021</p>
