--- a/src/app/components/brand-update/brand-update.component.html
+++ b/src/app/components/brand-update/brand-update.component.html
@@ -5,21 +5,23 @@
             <div class="card-body" *ngFor="let brand of brands">
                 <form [formGroup]="brandUpdateForm">
                     <div class="form-group mb-3">
-                        <input type="number" id="id" formControlName="id" 
-                        class="form-control" placeholder="{{brand.id}}"/>
+                        <input type="hidden" id="id" formControlName="id" 
+                        class="form-control" placeholder="{{brand.id}}"
+                        [(ngModel)]="brand.id"/>
                     </div>
                 </form>
                 <form [formGroup]="brandUpdateForm">
                     <div class="form-group mb-3">
                         <input type="text" id="name" formControlName="name" 
-                        class="form-control" placeholder="{{brand.name}}"/>
+                        class="form-control" placeholder="{{brand.name}}"
+                        [(ngModel)]="brand.name"/>
                     </div>
                 </form>
             </div>
             <div class="card-footer">
                 <button class="btn btn-fill btn-primary" (click)="update()" (click)="goToBrandList()">Kaydet</button>
-                <!-- <button class="btn btn-fill btn-primary" style="margin-left: 4ex;" (click)="goToBrandList()"
-                >Geri Dön</button> -->
+                <button class="btn btn-fill btn-primary" style="margin-left: 4ex;" (click)="goToBrandList()"
+                >Geri Dön</button>
             </div>
         </div>
     </div>
