--- a/src/app/components/color-update/color-update.component.html
+++ b/src/app/components/color-update/color-update.component.html
@@ -5,23 +5,25 @@
             <div class="card-body" *ngFor="let color of colors">
                 <form [formGroup]="colorUpdateForm">
                     <div class="form-group form-floating mb-3">
-                        <input type="number" id="id" formControlName="id" 
-                        class="form-control" placeholder="{{color.id}}"/>
+                        <input type="hidden" id="id" formControlName="id" 
+                        class="form-control" placeholder="{{color.id}}"
+                        [(ngModel)]="color.id"/>
                         <label for="id">Id: {{color.id}}</label>
                     </div>
                 </form>
                 <form [formGroup]="colorUpdateForm">
                     <div class="form-group form-floating mb-3">
                         <input type="text" id="name" formControlName="name" 
-                        class="form-control" placeholder="{{color.name}}"/>
-                        <label for="name">Renk: {{color.name}}</label>
+                        class="form-control" placeholder="{{color.name}}"
+                        [(ngModel)]="color.name"/>
+                        <label for="name">Renk</label>
                     </div>
                 </form>
             </div>
             <div class="card-footer">
                 <button class="btn btn-fill btn-primary" (click)="update()" (click)="goToColorList()">Kaydet</button>
-                <!-- <button class="btn btn-fill btn-primary" style="margin-left: 4ex;" (click)="goToColorList()"
-                >Geri Dön</button> -->
+                <button class="btn btn-fill btn-primary" style="margin-left: 4ex;" (click)="goToColorList()"
+                >Geri Dön</button>
             </div>
         </div>
     </div>
