--- a/src/app/components/car-update/car-update.component.html
+++ b/src/app/components/car-update/car-update.component.html
@@ -23,7 +23,7 @@
                         <input type="number" id="colorId" formControlName="colorId" 
                         class="form-control" placeholder="{{cardetail.colorId}}"
                         [(ngModel)]="cardetail.colorId"/>
-                        <label for="brandId">Rnk Id</label>
+                        <label for="brandId">Renk Id</label>
                     </div>
                 </form>
                 <form [formGroup]="carUpdateForm">
